<resources>

    <!-- PREFS -->
    <string name="pref_key_customAlarmEnabled">pref_key_customAlarmEnabled</string>
    <string name="pref_title_customAlarmEnabled">Custom Alarm Audio</string>
    <string name="pref_summary_customAlarmEnabled">Select custom alarm sound</string>
    <string name="pref_default_customAlarmEnabled">false</string>

    <string name="pref_key_alarmAudioName">pref_key_alarmAudioName</string>
    <string name="pref_key_alarmFilePath">pref_key_alarmFilePath</string>

    <string name="pref_key_isOnlyTrafficAlerts">pref_key_isOnlyTrafficAlerts</string>
    <string name="pref_title_isOnlyTrafficAlerts">Traffic Alerts Only</string>
    <string name="pref_summary_isOnlyTrafficAlerts">Disable to also use as a standard alarm</string>
    <string name="pref_default_isOnlyTrafficAlerts">true</string>

    <string name="pref_key_alarmDurationThreshold">pref_key_alarmDurationThreshold</string>
    <string name="pref_title_alarmDurationThreshold">Trigger Threshold</string>
    <string name="pref_summary_alarmDurationThreshold">Triggers the alarm when traffic delay duration breaks the threshold value</string>

    <string name="pref_key_trafficModel">pref_key_trafficModel</string>
    <string name="pref_title_trafficModel">Traffic Model</string>
    <string name="pref_summary_trafficModel">Assumptions to use when calculating the estimated travel time</string>
    <string name="pref_defaultValue_trafficModel">best_guess</string>

    <string name="pref_key_contentFragment_testTimestamp">KEY_CONTENT_FRAGMENT_TEST_TIMESTAMP</string>


    <!-- KEYS -->
    <string name="key_contentFragment_alarmPK">KEY_CONTENT_FRAGMENT_ALARM_PK</string>
    <string name="key_mainActivity_saveJsonApiRequest">KEY_MAIN_ACTIVITY_JSON_API</string>
    <string name="key_addressActivity_title">KEY_ADDRESS_ACTIVITY_TITLE</string>
    <string name="key_addressFragment_ignoredKeys">KEY_ADDRESS_FRAGMENT_IGNOREDKEYS</string>
    <string name="key_timePickerFragment_hour">KEY_TIMEPICKER_HOUR</string>
    <string name="key_timePickerFragment_minute">KEY_TIMEPICKER_MINUTE</string>

    <string name="key_serviceAlarm_skipApiRequest">KEY_SERVICE_ALARM_SKIP_API_REQUEST</string>
    <string name="key_activeAlarm_addressOriginPK">KEY_ALARM_ADDRESS_ORIGIN</string>
    <string name="key_activeAlarm_addressDestinationPK">KEY_ALARM_ADDRESS_DESTINATION</string>
    <string name="key_apiJsonResult">KEY_ALARM_API_RESULT</string>

    <string name="tag_addressFragment_origin">TAG_ADDRESS_FRAGMENT_ORIGIN</string>
    <string name="tag_addressFragment_destination">TAG_ADDRESS_FRAGMENT_DESTINATION</string>


    <!-- Overall Display Text -->
    <string name="app_name">Traffic Alarm</string>
    <string name="app_title_alarm">Alarm</string>
    <string name="app_title_network">Network</string>
    <string name="app_title_settings">Settings</string>
    <string name="app_title_menu">Menu</string>
    <string name="app_title_address">Address</string>

    <string name="value_dialog_ok">OK</string>
    <string name="value_no">No</string>
    <string name="value_dialog_cancel">Cancel</string>
    <string name="value_dialog_swap">Swap</string>
    <string name="value_oneMin">1 min</string>
    <string name="value_fourMin">4 min</string>
    <string name="value_fiveMin">5 min</string>
    <string name="value_sevenMin">7 min</string>
    <string name="value_tenMin">10 min</string>
    <string name="value_share">Share</string>
    <string name="value_about">About</string>
    <string name="value_pleaseWait">Please wait&#8230;</string>
    <string name="value_ellipsis">&#8230;</string>
    <string name="value_enabled">Enabled</string>
    <string name="value_disabled">Disabled</string>

    <string name="value_addressActivity_completeWarning">Please complete the address fields</string>
    <string name="value_mainActivity_titleNewAddress">New Address</string>
    <string name="value_mainActivity_tooFewAddressNotice">At least 2 addresses are required. Would you like to add one now?</string>
    <string name="value_mainActivity_deleteAddressWarning">Are you sure you want to delete this address? Any recorded time requests will be lost.</string>
    <string name="value_mainActivity_activeAlarmSwitching">Switching active alarms will unset the currently active alarm. Continue?</string>
    <string name="value_settingsActivity_unableUseFileAudio">Unable to use selected file as audio.</string>
    <string name="value_contentFragment_originDestRequired">Origin and destination address required.</string>
    <string name="value_logging_apiRequestThread">Error checking for internet connectivity.</string>
    <string name="value_logging_apiRequestStream">Error attempting to request traffic duration.</string>
    <string name="value_logging_noInternetConnectivity">Unable to acquire internet connection.</string>

    <!-- Logging -->
    <string name="logging_general">Something went wrong. Please contact the app publisher.</string>
    <string name="logging_mainActivity_contentCleared">Screen cleared.</string>
    <string name="logging_newAlarmTimeSelected">New alarm time set.</string>
    <string name="logging_addressActivity_addressSaved">Address saved.</string>
    <string name="logging_mainActivity_addressDeleted">Address deleted.</string>
    <string name="logging_mainActivity_addressSelected">Address selected.</string>
    <string name="logging_preferenceFrag_customAlarmPermissionDenied">Permission required to set the custom alarm media.</string>
    <string name="logging_preferenceFrag_customAlarmChangedEndText"> custom alarm.</string>
    <string name="logging_preferenceFrag_thresholdChanged">Threshold for traffic duration set to %1$d minutes.</string>
    <string name="logging_preferenceFrag_trafficModelChanged">Traffic model updated to</string>
    <string name="logging_settingsActivity_fileSelect">Media file selected for alarm.</string>
    <string name="logging_alarmActivity_mediaPlayError">Error playing media for alarm.</string>
    <string name="logging_alarmActivity_selectNewMedia">Please select a different media file.</string>
    <string name="logging_appBootReceiver">Alarm set upon boot of the device.</string>
    <string name="logging_alarmTrigger">Alarm triggered.</string>
    <string name="logging_alarmCanceled">Alarm canceled.</string>
    <string name="logging_activeAlarmSwitched">Active alarm switched.</string>
    <string name="logging_alarmSetForTime">Next traffic check scheduled for</string>
    <string name="logging_apiTestButtonClick">Begin traffic request test&#8230;</string>

</resources>
